--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
 
 <div class="jumbo">
   <h2>Welcome to my Christmas App!</h2>
-  <h3>Fill out the following information to create your custom christmas card!</h3>
+  <h3>Click the button to create your custom christmas card!</h3>
+  <a href="{{ url_for('input') }}"><h3>Create</h3></a>
 </div>
 {% endblock %}
