--- a/static/css/main.css
+++ b/static/css/main.css
@@ -85,3 +85,19 @@ h3 {
   color: #999;
   text-decoration: none;
 }
+
+/*
+ * Christmas Card Styling
+ */
+
+.card{
+	width: 100%;
+	height: 940px;
+}
+
+.background{
+	max-width: 940px;
+	height: auto;
+	width: auto;
+}
+	
