--- a/templates/card.html
+++ b/templates/card.html
@@ -4,5 +4,28 @@
 <div class="card">
   {% if bg == 'snow' %}
   <img class="background" src="http://www.hdwallpaperspick.com/wp-content/uploads/2012/09/conifers-in-snow-wallpaper.jpg">
+  <div class="snow">
+      <h1 class="recipient-name-snow">My Dearest {{ name }},</h1>
+      <p class="card-message-snow"><strong>{{ msg }}</strong></p>
+      <h1 class="sender-name-snow">Yours Truly, <br> {{ sender }}</h1>
+  </div>
   {% endif %}
+  {% if bg == 'tree' %}
+  <img class="background" src="http://6269-9001.zippykid.netdna-cdn.com/wp-content/uploads/2013/09/Free-Christmas-Tree-Live-Wallpaper.jpg">
+  <div class="tree">
+    <h1 class="recipient-name-tree">My Dearest {{ name }},</h1>
+    <p class="card-message-tree">{{ msg }}</p>
+    <h1 class="sender-name-tree">Yours Truly, <br> {{ sender }}</h1>
+  </div>
+  {% endif %}
+
+  {% if bg == 'sleigh' %}
+  <img class="background" src="http://openezx.net/wp-content/uploads/2013/12/xmas-santa-and-reindeer-pc-wallpapersantas-sleigh-and-reindeer---christmas-santa-wallpaper-image-ifu6h5o7.jpg">
+  <div class="sleigh">
+    <h1 class="recipient-name sleigh">My Dearest {{ name }},</h1>
+    <p class="card-message sleigh">{{ msg }}</p>
+    <h1 class="sender-name sleigh">Yours Truly, <br> {{ sender }}</h1>
+  </div>
+  {% endif %}
+  
 {% endblock %}
