--- a/templates/card.html
+++ b/templates/card.html
@@ -22,9 +22,9 @@
   {% if bg == 'sleigh' %}
   <img class="background" src="http://openezx.net/wp-content/uploads/2013/12/xmas-santa-and-reindeer-pc-wallpapersantas-sleigh-and-reindeer---christmas-santa-wallpaper-image-ifu6h5o7.jpg">
   <div class="sleigh">
-    <h1 class="recipient-name sleigh">My Dearest {{ name }},</h1>
-    <p class="card-message sleigh">{{ msg }}</p>
-    <h1 class="sender-name sleigh">Yours Truly, <br> {{ sender }}</h1>
+    <h1 class="recipient-name-sleigh">My Dearest {{ name }},</h1>
+    <p class="card-message-sleigh">{{ msg }}</p>
+    <h1 class="sender-name-sleigh">Yours Truly, <br> {{ sender }}</h1>
   </div>
   {% endif %}
   
