--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,17 @@
   <head>
     <title>Christmas App</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-43054097-3', 'mychristmascards.herokuapp.com');
+  ga('send', 'pageview');
+
+</script>
   </head>
   
   <body>
