--- a/templates/enterInfo.html
+++ b/templates/enterInfo.html
@@ -27,6 +27,13 @@
     <input type="radio" name="background" value="sleigh">Santa's Sleigh</input>
   </label>
   <br>
+  <br>
+  <label>
+    Please give a name for you card 
+    <input type="text" name="title">
+  </label>
+  <br>
+  <br>
   <input type="submit">
   {% if error %}<p style="color: red">Error: {{ error }}</p>{% endif %}
 </form>
