--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,13 @@
   <h2>Welcome to my Christmas App!</h2>
   <h3>Click the button to create your custom christmas card!</h3>
   <a href="{{ url_for('input') }}"><h3>Create</h3></a>
+  <br>
+  <br>
+  <h2>List of created cards:</h2>
+  <ul class="entries">
+  {% for entry in entries %}
+  <li><h3><a href="/get_card/{{ entry.title }}">{{ entry.title }}</a></h2>
+  {% endfor %}
+  </ul>
 </div>
 {% endblock %}
